RootManager switched to ProcessBuilder